// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeField should render a loading state 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <div>
        <p>
          <FormattedMessage
            defaultMessage="The Time Filter will use this field to filter your data by time. You can choose not to have a time field, but you will not be able to narrow down your data by a time range."
            id="management.indexPattern.create.stepTime.field.detail"
            values={Object {}}
          />
        </p>
      </div>
    }
    label={
      <EuiFlexGroup
        alignItems="center"
        component="div"
        direction="row"
        gutterSize="xs"
        justifyContent="spaceBetween"
        responsive={true}
        wrap={false}
      >
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <span>
            <FormattedMessage
              defaultMessage="Time Filter field name"
              id="management.indexPattern.create.stepTime.field.name"
              values={Object {}}
            />
          </span>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <EuiLoadingSpinner
            size="s"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    }
  >
    <I18nContext />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render a selected time field 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <div>
        <p>
          <FormattedMessage
            defaultMessage="The Time Filter will use this field to filter your data by time. You can choose not to have a time field, but you will not be able to narrow down your data by a time range."
            id="management.indexPattern.create.stepTime.field.detail"
            values={Object {}}
          />
        </p>
      </div>
    }
    label={
      <EuiFlexGroup
        alignItems="center"
        component="div"
        direction="row"
        gutterSize="xs"
        justifyContent="spaceBetween"
        responsive={true}
        wrap={false}
      >
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <span>
            <FormattedMessage
              defaultMessage="Time Filter field name"
              id="management.indexPattern.create.stepTime.field.name"
              values={Object {}}
            />
          </span>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <EuiLink
            className="timeFieldRefreshButton"
            color="primary"
            onClick={[Function]}
            type="button"
          >
            <FormattedMessage
              defaultMessage="Refresh"
              id="management.indexPattern.create.stepTime.field.refresh"
              values={Object {}}
            />
          </EuiLink>
        </EuiFlexItem>
      </EuiFlexGroup>
    }
  >
    <EuiSelect
      compressed={false}
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value="@timestamp"
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render normally 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <div>
        <p>
          <FormattedMessage
            defaultMessage="The Time Filter will use this field to filter your data by time. You can choose not to have a time field, but you will not be able to narrow down your data by a time range."
            id="management.indexPattern.create.stepTime.field.detail"
            values={Object {}}
          />
        </p>
      </div>
    }
    label={
      <EuiFlexGroup
        alignItems="center"
        component="div"
        direction="row"
        gutterSize="xs"
        justifyContent="spaceBetween"
        responsive={true}
        wrap={false}
      >
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <span>
            <FormattedMessage
              defaultMessage="Time Filter field name"
              id="management.indexPattern.create.stepTime.field.name"
              values={Object {}}
            />
          </span>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <EuiLink
            className="timeFieldRefreshButton"
            color="primary"
            onClick={[Function]}
            type="button"
          >
            <FormattedMessage
              defaultMessage="Refresh"
              id="management.indexPattern.create.stepTime.field.refresh"
              values={Object {}}
            />
          </EuiLink>
        </EuiFlexItem>
      </EuiFlexGroup>
    }
  >
    <EuiSelect
      compressed={false}
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value=""
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render something if hiding time field 1`] = `
<EuiForm>
  <EuiText
    grow={true}
  >
    <p>
      <FormattedMessage
        defaultMessage="The indices which match this index pattern don't contain any time fields."
        id="management.indexPattern.create.stepTime.field.noTimeFields"
        values={Object {}}
      />
    </p>
  </EuiText>
</EuiForm>
`;
